@@ -1,6 +1,9 @@
 # ChangeLog for sys-apps/portage
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/portage/ChangeLog,v 1.1313 2013/07/23 03:18:30 zmedico Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/portage/ChangeLog,v 1.1314 2013/07/25 18:11:37 zmedico Exp $
+
+  25 Jul 2013; Zac Medico <zmedico@gentoo.org> portage-9999.ebuild:
+  Adjust repos.conf main-repo for prefix support.
 
   23 Jul 2013; Zac Medico <zmedico@gentoo.org> portage-9999.ebuild:
   Adjust repos.conf sync-uri for prefix support.
